--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramadan Kareem</title>
 
+
     <!-- css  -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -19,8 +20,8 @@
             <a href="#" class="logo">Ramadan</a>
 
             <ul class="navigation">
-                <li><a href="" style="--i:1;" class="active"> Home </a></li>
-                <li><a href="/calendar/index.html" style="--i:3;"> Calender </a></li>
+                <li><a href="/index.html" style="--i:1;" class="active"> Home </a></li>
+                <li><a href="calender.html" style="--i:3;"> Calender </a></li>
             </ul>
         </header>
 
